--- a/app/views/organizer/events/index.html.erb
+++ b/app/views/organizer/events/index.html.erb
@@ -3,24 +3,43 @@
     <table class="table table-striped">
       <thead>
         <tr>
-          <th>Event</th>
-          <th>Time to Show</th>
-          <th>All Sales / Target</th>
-          <th>Un-Banked Sales</th>
-          <th>Cash in Bank</th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
         </tr>
       </thead>
       <% if current_user.profile %>
         <tbody>
           <% @events.each do |event| %>
           <tr>
-            <td><%= link_to event.artist, event_path(event), class: "" %></td>
-            <td> <%= distance_of_time_in_words(Time.now, event.date) %> </td>
-            <td> <%= event.orders.total.to_a.sum { |item| item.quantity} %> /
-                 <%= event.target %> Tickets
+            <td>
+              <a class="thumbnail" href="<%= event_path(event) %>">
+                <% if event.image? %>
+                  <%= filepicker_image_tag event.image, w: 100, h: 100, fit: 'crop' %>
+                <% else %>
+                  <img src="http://placehold.it/240" alt="">
+                <% end %>
+              </a>
             </td>
-            <td> <%= event.orders.pending.to_a.sum { |item| item.quantity} %> Tickets </td>
-            <td> <%= number_to_currency(event.orders.paid.to_a.sum { |order| order.banked}) %> </td>
+            <td>
+              <dt>Time Left</dt>
+              <dd><%= distance_of_time_in_words(Time.now, event.date) %></dd>
+              <dt>Time Left</dt>
+              <dd><%= distance_of_time_in_words(Time.now, event.date) %></dd>
+            </td>
+            <td>
+              <dt>Time Left</dt>
+              <dd><%= distance_of_time_in_words(Time.now, event.date) %></dd>
+              <dt>Time Left</dt>
+              <dd><%= distance_of_time_in_words(Time.now, event.date) %></dd>
+            </td>
+            <td>
+              <dt>Time Left</dt>
+              <dd><%= distance_of_time_in_words(Time.now, event.date) %></dd>
+              <dt>Time Left</dt>
+              <dd><%= distance_of_time_in_words(Time.now, event.date) %></dd>
+            </td>
             <td >
               <div class="btn-group pull-right">
                 <%= link_to raw('<i class="icon-list"></i>'), [:organizer, event], class: "btn" %>
