--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -4,6 +4,11 @@
       <% if user_signed_in? && current_user.profile == @profile %>
         <%= link_to "Content Editor", "/editor/organizer" + request.path, id: "edit_link", class: "btn btn-large editor", rel: "popover", data: { content: "This will reveal a toolbar allowing you to edit your name, general info and tour info on the page. Click the save icon in the toolbar when you're finished.", trigger: "hover", :"original-title" => "Editing Content" } %>
         <%= link_to "Profile Settings", edit_organizer_profile_path(@profile), class: "btn btn-large editor", rel: "popover", data: { content: "Edit your picture, media, location and hide/un-hide your profile.", trigger: "hover", :"original-title" => "Profile Settings" } %>
+        <% if current_user.profile && current_user.profile.api_key %>
+          <button class="btn btn-success">Connected to Stripe <i class="icon-ok-circle icon-white"></i></button>
+        <% elsif current_user.profile %>
+          <%= link_to image_tag('blue.png'), user_omniauth_authorize_path(:stripe_connect), class: "" %>
+        <% end %>
       <% elsif user_signed_in? && current_user.promoters.where("event_id IS NULL").include?(@profile.user) %>
         <button class="btn btn-success">Tour Requested <i class="icon-check icon-white"></i></button>
       <% elsif user_signed_in? %>
