--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -1,19 +1,41 @@
 <div class="row">
-  <div class="span12" id="button-menu">
+  <div class="span2" id="button-menu">
     <%= form_tag  charge_multiple_orders_path, method: :post  do %>
-      <div class="option-buttons">
-        <% if current_user.profile && current_user.profile.api_key %>
-          <%= submit_tag "Charge Selected", class: "btn btn-success" %>
-          <%= submit_tag "Refund Selected", name: 'refund', class: "btn btn-danger", id: "refund" %>
-        <% elsif current_user.profile %>
-          <%= link_to image_tag('blue.png'), user_omniauth_authorize_path(:stripe_connect), class: "" %>
-        <% end %>
-        <%= link_to "Generate PDF", organizer_event_path(@event, format: "pdf"), class: "btn" %>
-        <%= submit_tag "Cancel Event", name: 'refund', class: "btn btn-danger" %>
-        <%= link_to "Check In View", root_path, class: "btn" %>
+      <div class="btn-group">
+        <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+          Change Event
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+          <% @events.each do |e| %>
+          <li><%= link_to "#{e.artist}", organizer_event_path(e) %></li>
+          <% end %>
+        </ul>
       </div>
-      <hr>
+  </div>
+  <div class="span2">
+    <div class="btn-group">
+      <% if current_user.profile && current_user.profile.api_key %>
+        <%= submit_tag "Charge Selected", class: "btn" %>
+        <%= submit_tag "Refund Selected", name: 'refund', class: "btn", id: "refund" %>
+      <% elsif current_user.profile %>
+        <%= link_to image_tag('blue.png'), user_omniauth_authorize_path(:stripe_connect), class: "" %>
+      <% end %>
+    </div>
+  </div>
+  <div class="span1 offset2">
+    <div class="btn-group">
+      <%= submit_tag "Cancel Event", name: 'refund', class: "btn" %>
+    </div>
+  </div>
+
+  <div class="span4 offset1">
+    <div class="btn-group">
+      <%= link_to "Generate PDF", organizer_event_path(@event, format: "pdf"), class: "btn" %>
+      <%= link_to "Check In View", root_path, class: "btn" %>
+    </div>
   </div> <!-- /button menu -->
+  <hr>
 </div> <!-- /row -->
 <div class="row">
   <aside class="span2">
