--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -37,7 +37,7 @@
 						<li class="span3 pull-left">
 							<a class="thumbnail" href="<%= event_path(event) %>">
 								<% if event.image? %>
-                  <%= filepicker_image_tag event.image, w: 240, h: 140, fit: 'crop' %>
+                  <%= filepicker_image_tag event.image, width: 240, height: 140, fit: 'crop' %>
                 <% else %>
                   <img src="http://placehold.it/240" alt="">
                 <% end %>
