--- a/app/views/organizer/events/index.html.erb
+++ b/app/views/organizer/events/index.html.erb
@@ -15,11 +15,7 @@
           <tr>
             <td>
               <a class="thumbnail" href="<%= event_path(event) %>">
-                <% if event.image? %>
-                  <%= filepicker_image_tag event.image, w: 100, h: 100, fit: 'crop' %>
-                <% else %>
-                  <img src="http://placehold.it/240" alt="">
-                <% end %>
+                <%= filepicker_image_tag event.image, width: 100, height: 100, fit: 'clip' if event.image? %>
               </a>
             </td>
             <td>
