--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -40,7 +40,7 @@
             <li class="span3">
               <a class="thumbnail" href="<%= profile_path(profile) %>">
                 <% if profile.image? %>
-                  <%= filepicker_image_tag profile.image, w: 240, h: 140, fit: 'crop' %>
+                <%= filepicker_image_tag profile.image, width: 240, height: 140, fit: 'crop' %>
                 <% else %>
                   <img src="http://placehold.it/300x240" alt="">
                 <% end %>
