--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="span2" id="button-menu">
-    <%= form_tag  charge_multiple_orders_path, method: :post  do %>
+    <%= form_tag  charge_or_refund_orders_path, method: :post  do %>
       <div class="btn-group">
         <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
           Change Event
@@ -16,7 +16,7 @@
   <div class="span2">
     <div class="btn-group">
       <% if current_user.profile && current_user.profile.api_key %>
-        <%= submit_tag "Charge Selected", class: "btn" %>
+        <%= submit_tag "Charge Selected", name: 'charge', class: "btn" %>
         <%= submit_tag "Refund Selected", name: 'refund', class: "btn", id: "refund" %>
       <% elsif current_user.profile %>
         <%= link_to image_tag('blue.png'), user_omniauth_authorize_path(:stripe_connect), class: "" %>
