--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -4,13 +4,10 @@
 			<div class="well">
 				<header>
 					<h2>Thanks <%= @order.name %>!... <br>
-						<small>Your order was successful.</small>
+						<small>Your order <%= number_to_currency(@order.total) %> was successful.</small>
 					</h2>
 					<p class="lead">
 						An email has been sent to <%= @order.email %> with your ticket. </p>
-						<p class="lead">Please note that your card won't be charged until the overall promotion of the show has succeeded. This is done to minimize bank charges should the show not reach its funding target in the alloted time. </p>
-						<p class="lead">If you don't have sufficient funds available when the charge is applied, the vendor will automatically retry the charge three times and then cancel your order. </p>
-						<p class="lead">In the event of a organizer / artist cancellation, i.e. a refund situation, you will be repaid the full amount of the charge, <%= link_to "full T&C", info_path %>. </p>
 					</p>
 				</header>
 				<% unless user_signed_in? %>
@@ -25,21 +22,6 @@
 						<% end %>
 				<% end %>
 			</div>
-		</div>
-	</div>
-
-	<div class="row">
-		<div class="span5">
-			<section class="section-box">
-				<div class="label-box">Payment Details</div>
-					<%= render 'payment' %>
-			</section>
-		</div>
-		<div class="span7">
-			<section id="order-summary" class="section-box">
-				<div class="label-box">Order Details</div>
-					<%= render 'order' %>
-			</section>
 		</div>
 	</div>
 </div>
