--- a/app/views/organizer/events/index.html.erb
+++ b/app/views/organizer/events/index.html.erb
@@ -9,7 +9,7 @@
           <th></th>
         </tr>
       </thead>
-      <% if current_user.profile %>
+      <% if current_user %>
         <tbody>
           <% @events.each do |event| %>
           <tr>
