--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -15,10 +15,10 @@
   </div>
   <div class="span2">
     <div class="btn-group">
-      <% if current_user.profile && current_user.profile.api_key %>
+      <% if current_user.api_key %>
         <%= submit_tag "Charge Selected", name: 'charge', class: "btn" %>
         <%= submit_tag "Refund Selected", name: 'refund', class: "btn" %>
-      <% elsif current_user.profile %>
+      <% elsif current_user %>
         <%= link_to image_tag('blue.png'), user_omniauth_authorize_path(:stripe_connect), class: "" %>
       <% end %>
     </div>
@@ -48,7 +48,7 @@
     </ul>
   </aside>
   <div class="span9">
-      <%= hidden_field_tag "organizer", current_user.profile.id %>
+      <%= hidden_field_tag "organizer", current_user.id %>
       <table class="table table-striped table-bordered" id="organizer-customers">
         <thead>
           <tr>
