more scaffolding etc removed

--- a/app/views/events/_body_holder.html.erb
+++ b/app/views/events/_body_holder.html.erb
@@ -25,4 +25,4 @@
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 				</p>
-				<p class="lead"> Thanks and see you at the show! <br> <%= @organizer.try(:promoter_name) %></p>
+				<p class="lead"> Thanks and see you at the show! <br> </p>
