everything working ok

--- a/app/views/notifier/_html_email.html.erb
+++ b/app/views/notifier/_html_email.html.erb
@@ -35,7 +35,7 @@
 		<tr>
 			<td width="600px" valign="top">
 				<h3>Your Order from 100 Motels</h3>
-				<%= render 'orders/order' %>
+				<%#= render 'orders/order' %>
 			</td>
 		</tr>
 	</table>
