--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="span1 offset2">
     <div class="btn-group">
-      <%= submit_tag "Cancel Event", name: 'refund', class: "btn" %>
+      <%= link_to "Cancel Event", cancel_organizer_event_path(@event), class: "btn" %>
     </div>
   </div>
 
