started on receipts for orders transactions, don't think I need a db, maybe a results page or autogenerate pdf

--- a/app/views/notifier/_html_email.html.erb
+++ b/app/views/notifier/_html_email.html.erb
@@ -34,8 +34,7 @@
 	<table width="600px" cellpadding="0" cellspacing="0" border="0" align="center">
 		<tr>
 			<td width="600px" valign="top">
-				<h3>Your Order from 100 Motels</h3>
-				<%#= render 'orders/order' %>
+				<legend>Your Order from 100 Motels</legend>
 			</td>
 		</tr>
 	</table>
