--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -23,13 +23,14 @@
       <% end %>
     </div>
   </div>
-  <div class="span1 offset2">
+  <div class="span2 offset2">
     <div class="btn-group">
-      <%= link_to "Cancel Event", cancel_organizer_event_path(@event), class: "btn" %>
+      <%= link_to "New Event", new_organizer_event_path(@event), class: "btn" %>
+      <%= link_to "Cancel Event", cancel_organizer_event_path(@event), class: "btn", data: { confirm: "Are you sure?" } %>
     </div>
   </div>
 
-  <div class="span4 offset1">
+  <div class="span3 offset1">
     <div class="btn-group">
       <%= link_to "Generate PDF", organizer_event_path(@event, format: "pdf"), class: "btn" %>
       <%= link_to "Check In View", root_path, class: "btn" %>
