fixed date controls on event index

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -10,8 +10,8 @@
   margin: 60px 0;
   text-align: center;
   .btn  {
-    padding: 19px 24px;
-    color: #FFFFFF;
+    padding: 20px;
+    // color: #FFFFFF;
     font-size: 19px;
     margin: 40px;
   }
@@ -79,4 +79,12 @@
 .copyright  {
   margin-bottom: 20px;
   padding-bottom: 20px;
+}
+
+// landing
+
+.input-huge {
+  width: 150px;
+  height: 40px;
+  margin: 40px;
 }
