created new state ticket_sent, the right approach?!

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -14,7 +14,7 @@
     </div>
     <div class="span12">
       <section>
-        <%= render '/events/form' %>
+        <%= link_to "New Event", class: 'btn btn-large' %>
       </section>
     </div>
 
