--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
                   <ul class="dropdown-menu">
                     <li><%= link_to "User Account", current_user %></li>
                     <li> <%= link_to "Your Events", organizer_events_path %>  </li>
-                    <li> <%= link_to "Tickets", organizer_tickets_path %>  </li>
+                    <li> <%#= link_to "Tickets", organizer_tickets_path %>  </li>
                     <li class="divider"></li>
                     <li><%= link_to "Sign out", destroy_user_session_path, :method => 'delete' %></li>
                   </ul>
