--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -33,7 +33,7 @@
   <div class="span3 offset1">
     <div class="btn-group">
       <%= link_to "Generate PDF", organizer_event_path(@event, format: "pdf"), class: "btn" %>
-      <%= link_to "Check In View", root_path, class: "btn" %>
+      <%= link_to "Check In View", organizer_event_tickets_path(@event), class: "btn" %>
     </div>
   </div> <!-- /button menu -->
   <hr>
