--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,52 +69,6 @@
     </div>
   </body>
   <footer>
-    <div class="container">
-      <div class="row-fluid footer-top">
-        <div class="span3 border-divider">
-          <dl>
-            <dt>Help Pages</dt>
-            <dd>ToS</dd>
-            <dd>Legal</dd>
-            <dd>Privacy</dd>
-            <dd><%= link_to "Support", info_path %></dd>
-          </dl>
-        </div>
-        <div class="span3 border-divider">
-          <dl>
-            <dt><%= link_to "How it works", info_path(anchor: "how") %></dt>
-            <dd><%= link_to "Pricing", info_path(anchor: "money") %></dd>
-            <dd><%= link_to "Artists", info_path(anchor: "artist") %></dd>
-            <dd><%= link_to "Organizing", info_path(anchor: "organizing") %></dd>
-            <dd><%= link_to "Customer Support", info_path(anchor: "attending") %></dd>
-          </dl>
-        </div>
-        <div class="span3 border-divider">
-          <dl>
-            <dt>About Us</dt>
-            <dd><%= link_to "Founders", info_path(anchor: "intro") %></dd>
-            <dt>Opportunities</dt>
-            <dd>Jobs</dd>
-            <dd>API / Developer</dd>
-          </dl>
-        </div>
-        <div class="span3">
-          <dl>
-            <dt><a href="//seocahill.com">My Blog</a></dt>
-            <dd>
-              <a href="//twitter.com/showkhill"><%= image_tag "twitter.png" %></a>
-              <a href="//facebook.com.com/seocahill"><%= image_tag "facebook.png" %>
-            </dd>
-            <div class="row">
-            </div>
-          </dl>
-        </div>
-      </div>
-      <div class="row footer-bottom">
-        <div class="span12">
-          <a href="//github.com/seocahill">Seo Cahill 2012</a>
-        </div>
-      </div>
-    </div>
+    <a href="//github.com/seocahill">&copy; Seo Cahill 2012</a>
   </footer>
 </html>
