--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -81,10 +81,9 @@
   padding-bottom: 20px;
 }
 
-// landing
+// index
 
-.input-huge {
-  width: 150px;
-  height: 40px;
-  margin: 40px;
+.container-narrow {
+margin: 0 auto;
+max-width: 700px;
 }
