--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,10 @@
     <![endif-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-  <body data-spy="scroll" data-target=".sidebar">
+  <body>
     <div class="navbar">
       <div class="navbar-inner">
-        <div class="container" style="width: auto;">
+        <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -57,7 +57,7 @@
       </div><!-- /navbar-inner -->
     </div>  <!-- /navbar -->
     <div id="wrap">
-      <div class="container content" id="main">
+      <div class="container" id="main">
         <% flash.each do |key, value| %>
           <div class="alert alert-<%= key == :notice ? "success" : "error" %>">
             <a class="close" data-dismiss="alert">&#215;</a>
@@ -66,9 +66,13 @@
         <% end %>
         <%= yield %>
       </div> <!-- /content container -->
+      <div id="push"></div>
+    </div> <!-- /wrap -->
+
+    <div id="footer">
+      <div class="container">
+        <a href="//github.com/seocahill">&copy; Seo Cahill 2012</a>
+      </div>
     </div>
   </body>
-  <footer>
-    <a href="//github.com/seocahill">&copy; Seo Cahill 2012</a>
-  </footer>
 </html>
