--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,10 +4,6 @@
 	</header>
 	<div class="row">
 		<div class="span3">
-			<% if user_signed_in?  %>
-				<%= link_to "Text Editor", "/editor" + request.path, class: "btn editor", rel: "popover", data: { content: "This will reveal a toolbar allowing you to edit text content on the page. Click the save icon in the toolbar when you're finished.", trigger: "hover", :"original-title" => "Editing Content" }, id: "edit_link" %>
-				<%= link_to "Edit Settings", edit_organizer_event_path(@event), class: "btn editor", rel: "popover", data: { content: "Edit the Event details and visibility.", trigger: "hover", :"original-title" => "Event Settings" }, id: "edit_link" %>
-			<% end %>
 		</div>
 		<div class="span2">
 		</div>
@@ -30,12 +26,12 @@
 				<div class="span5" align="center">
 					<h2>
 						<small>Promoter presents...</small> <br>
-						<div id="artist" data-mercury="full"><%= @event.artist %></div>
+						<div id="artist"><%= best_in_place @event, :artist %></div>
 					</h2>
 					<h4>
 						<%= @event.date.strftime("%a, %d %b %Y") %> <br>
 						 <br>
-						<%= @event.venue %> <br>
+						<%= best_in_place @event, :venue %> <br>
 					</h4>
 					<h1>~</h1>
 					<h4>
@@ -63,12 +59,8 @@
 				<div class="row">
 					<div class="span4">
 						<h3>Promoter says...</h3>
-						<div id="about" data-mercury="full">
-							<% if @event.about? %>
-								<%= raw @event.about %>
-							<% else %>
-								<%= render 'body_holder' %>
-							<% end %>
+						<div id="about">
+							<%= best_in_place @event, :about, :type => :textarea, :ok_button => 'Save', :cancel_button => 'Cancel', :nil => "Click me to add content!"  %>
 						</div>
 					</div>
 				</div>
