order by update at

--- a/app/views/organizer/tickets/index.html.erb
+++ b/app/views/organizer/tickets/index.html.erb
@@ -22,7 +22,7 @@
         <tbody>
          <% @tickets.each do |t| %>
           <tr>
-            <td><%= link_to t.order.name, order_path(t.order) %></td>
+            <td><%= link_to "#{t.order.email} | #{t.quantity_counter}", order_path(t.order) %></td>
             <td><%= t.admitted ? "Admitted #{t.admitted}" : "Not Admitted" %></td>
             <td><%= link_to "Admit", organizer_event_ticket_path(@event, t), method: :put, class: "btn btn-warning", data: {confirm: t.number} unless t.admitted %></td>
           </tr>
