--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -30,7 +30,8 @@
 						<div id="artist"><%= best_in_place_if user_signed_in?, @event, :artist %></div>
 					</h2>
 					<h4>
-						<%= @event.date.strftime("%a, %d %b %Y") %> <br>
+						<%#= @event.date.strftime("%a, %d %b %Y") %> <br>
+						<%= best_in_place_if user_signed_in?, @event, :date, type: :date, display_with: lambda { |v| v.strftime("%a, %d %b %Y") } %>
 						 <br>
 						<%= best_in_place @event, :venue %> <br>
 					</h4>
@@ -38,7 +39,7 @@
 					<h4>
 						Doors  <br>
 						at <br>
-						<%= @event.date.strftime("%l:%M %p") %>
+						<%= best_in_place @event, :doors, display_with: lambda { |v| v.strftime("%l:%M %p")} %>
 					</h4>
 				</div>
 				<div class="span3">
