--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -12,8 +12,8 @@
       <hr>
 
       <div class="jumbotron">
-        <h1>Artistic freedom is great</h1>
-        <p class="lead">But sometimes you need money up-front, like for example if you're travelling to play an independent show. 100 Motels will help you get cash and organize your event. It costs nothing to back out or reschedule your event and it's super cheap if you go ahead. Give it a go!</p>
+        <h1>Artistic freedom is great</h1> <br>
+        <p class="lead">But sometimes you need money up-front, like for example if you're travelling abroad to play an independent show. 100 Motels will help you get cash and organize your event. It costs nothing to back out or reschedule your event and it's super cheap if you go ahead. Give it a go!</p>
         <%= link_to "New Event", events_path, method: :post, class: 'btn btn-large btn-success' %>
       </div>
 
