added omniauth initializer prepping for removal of devise

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -12,8 +12,11 @@
       <hr>
 
       <div class="jumbotron">
-        <h1>Artistic freedom is great</h1> <br>
-        <p class="lead">But sometimes you need money up-front, like for example if you're travelling abroad to play an independent show. 100 Motels will help you get cash and organize your event. It costs nothing to back out or reschedule your event and it's super cheap if you go ahead. Give it a go!</p>
+        <h1>Did you ever want to put on an event...<br>
+          <small>but you weren't sure if it was worth it?</small>
+        </h1> <br>
+        <p class="lead">As a musician I get this a lot. People want me to play for them, I want to play for them but neither of us
+          wants to pay the cost of the show up front. Hoping to recoup costs ('build it and they will come') is a great way to extinguish hope while paying for promotion is expensive with no guaranteed return. Try 100 Motels instead.  </p>
         <%= link_to "New Event", events_path, method: :post, class: 'btn btn-large btn-success' %>
       </div>
 
@@ -24,3 +27,4 @@
       </div>
 
     </div>
+
